--- a/app/views/employees/_form.html.erb
+++ b/app/views/employees/_form.html.erb
@@ -28,6 +28,11 @@
   </div>
   <br>
 
+  <div class="field form-group">
+    <%= form.number_field :user_id, id: :employee_user_id, class: "form-control", value:current_user.id, type: :hidden %>
+  </div>
+  <br>
+
 
   <div class="actions form-group">
     <%= form.submit class: "btn btn-outline-secondary"%>
