--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -7,7 +7,21 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <%= link_to 'My Employees', employees_path, class: "nav-link" %>
+
+        <% if user_signed_in?%>
+
+          <%= link_to 'My Employees', employees_path, class: "nav-link" %>
+
+          <%= link_to 'Edit Profile', edit_user_registration_path, class: "nav-link" %>
+
+          <%= link_to 'Sign Out', destroy_user_session_path, method: :delete, class: "nav-link" %>
+
+        <% else %>
+          <%= link_to 'Sign Up', new_user_registration_path, class: "nav-link" %>
+
+          <%= link_to 'Sign In', new_user_session_path, class: "nav-link" %>
+
+        <% end %>
       </div>
     </div>
   </div>
