Work on the Busy table

--- a/app/views/busies/_form.html.erb
+++ b/app/views/busies/_form.html.erb
@@ -13,17 +13,17 @@
 
   <div class="field">
     <%= form.label :start_time %>
-    <%= form.number_field :start_time %>
+    <%= form.datetime_field :start_time %>
   </div>
 
   <div class="field">
     <%= form.label :end_time %>
-    <%= form.number_field :end_time %>
+    <%= form.datetime_field :end_time %>
   </div>
 
   <div class="field">
     <%= form.label :employee_id %>
-    <%= form.number_field :employee_id %>
+    <%= form.number_field :employee_id, value: params[:employee_id]%>
   </div>
 
   <div class="actions">
