--- a/app/views/busies/edit.html.erb
+++ b/app/views/busies/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form', busy: @busy %>
 
 <%= link_to 'Show', @busy %> |
-<%= link_to 'Back', busies_path %>
+<%= link_to 'Back', employees_path %>
