--- a/app/views/busies/show.html.erb
+++ b/app/views/busies/show.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
 <p>
   <strong>Start time:</strong>
   <%= @busy.start_time %>
@@ -16,4 +14,4 @@
 </p>
 
 <%= link_to 'Edit', edit_busy_path(@busy) %> |
-<%= link_to 'Back', busies_path %>
+<%= link_to 'Back', employees_path %>
