minor ui changes

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -13,7 +13,7 @@
   <% end %>
 
   <div class="field form-group">
-    <%= f.password_field :password, placeholder:"New Password", autocomplete: "new-password", class: "form-control" %>
+    <%= f.password_field :password, placeholder:"New Password - Leave blank for no change.", autocomplete: "new-password", class: "form-control" %>
     <% if @minimum_password_length %>
       <br />
     <% end %>
