--- a/app/views/employees/show.html.erb
+++ b/app/views/employees/show.html.erb
@@ -3,6 +3,7 @@
   <%= @employee.first_name + ' ' + @employee.last_name %>
   </h1>
   <br>
+  <br>
 
 <p style="margin-top: 5ems;">
   <strong>Employee ID:</strong>
@@ -11,6 +12,35 @@
   <strong>Phone:</strong>
   <%= @employee.phone %>
 </p>
+<br>
+
+<h4>
+Employee Busies: 
+</h4>
+<br>
+
+<% if @employee.busies.first != nil %>
+  <table class="table">
+    <thead>
+      <tr>
+        <th>Start Time</th>
+        <th>End Time</th>
+        <th colspan="3"></th>
+      </tr>
+    </thead>
+
+  <tbody>
+    <% @employee.busies.each do |busy| %>
+      <tr>
+        <td><%= busy.start_time %></td>
+        <td><%= busy.end_time %></td>
+      </tr>
+    <% end %>
+    </tbody>
+  </table>
+  <% end %>
+
+
 <%= link_to 'Create New Busy', new_busy_path(@employee.id, employee_id: @employee.id),  class:"btn btn-outline-secondary"%>
 <br>
 <br>
