--- a/app/views/busies/_form.html.erb
+++ b/app/views/busies/_form.html.erb
@@ -22,11 +22,10 @@
   </div>
 
   <div class="field">
-    <%= form.label :employee_id %>
-    <%= form.number_field :employee_id, value: params[:employee_id]%>
+    <%= form.number_field :employee_id, value: params[:employee_id], type: :hidden%>
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit class: "btn btn-outline-secondary"%>
   </div>
 <% end %>
