--- a/app/views/employees/index.html.erb
+++ b/app/views/employees/index.html.erb
@@ -30,3 +30,21 @@
 <br>
 
 <%= link_to 'New Employee', new_employee_path, class:"btn btn-outline-secondary" %>
+
+<br>
+<br>
+<br>
+<br>
+<br>
+
+
+<h3>
+Find Employees to Schedule:
+</h3>
+<br>
+
+
+<%= render 'search.html.erb' %>
+<br>
+<p> Available employees will be displayed in the table above. </p>
+
