--- a/app/views/busies/_form.html.erb
+++ b/app/views/busies/_form.html.erb
@@ -13,17 +13,20 @@
 
   <div class="field">
     <%= form.label :start_time %>
-    <%= form.datetime_field :start_time %>
+    <%= form.datetime_field :start_time, class: "input-group date datetimepicker1" %>
   </div>
+  <br>
+
 
   <div class="field">
     <%= form.label :end_time %>
-    <%= form.datetime_field :end_time %>
+    <%= form.datetime_field :end_time, class: "input-group date datetimepicker1" %>
   </div>
 
   <div class="field">
     <%= form.number_field :employee_id, value: params[:employee_id], type: :hidden%>
   </div>
+  <br>
 
   <div class="actions">
     <%= form.submit class: "btn btn-outline-secondary"%>
