--- a/app/views/employees/_search.html.erb
+++ b/app/views/employees/_search.html.erb
@@ -1,17 +1,17 @@
 <%= form_with url: '/employees', method: :get do |form| %>
 
     <%= form.label :start_time, "Desired Start Time:" %>
-    <%= form.datetime_field :start_time %>
+    <%= form.datetime_field :start_time, class: "input-group date datetimepicker1"  %>
     <br>
     <br>
 
 
 
     <%= form.label :end_time, "Desired End Time:" %>
-    <%= form.datetime_field :end_time %>
+    <%= form.datetime_field :end_time, class: "input-group date datetimepicker1" %>
     <br>
     <br>
 
 
-    <%= form.submit  'Find Employees'%>
+    <%= form.submit  'Find Employees', class:"btn btn-outline-secondary"%>
     <% end %>
