Fix sql query The heart and soul the project is now working! User can sign up, register employees, input the times their employees are not available, and find employees who are available for a given shif time. MVP baby

--- a/app/views/employees/index.html.erb
+++ b/app/views/employees/index.html.erb
@@ -1,5 +1,8 @@
 <h1>Employees</h1>
 
+<%= @start_time %>
+<%= @end_time %>
+
 <% if current_user.employees.first != nil%>
   <table class="table">
     <thead>
