--- a/app/views/busies/_form.html.erb
+++ b/app/views/busies/_form.html.erb
@@ -13,14 +13,14 @@
 
   <div class="field">
     <%= form.label :start_time %>
-    <%= form.datetime_field :start_time, class: "input-group date datetimepicker1" %>
+    <%= form.datetime_field :start_time%>
   </div>
   <br>
 
 
   <div class="field">
     <%= form.label :end_time %>
-    <%= form.datetime_field :end_time, class: "input-group date datetimepicker1" %>
+    <%= form.datetime_field :end_time%>
   </div>
 
   <div class="field">
