--- a/app/views/employees/show.html.erb
+++ b/app/views/employees/show.html.erb
@@ -1,6 +1,6 @@
 <h1 style="display:inline; width: 100px;">
 
-  <%= @employee.first_name + @employee.last_name %>
+  <%= @employee.first_name + ' ' + @employee.last_name %>
   </h1>
   <br>
   <br>
