Clean up functionality. No longer worried about user roles.

--- a/app/views/employees/index.html.erb
+++ b/app/views/employees/index.html.erb
@@ -38,6 +38,8 @@
 <h4> Your Manager ID is: <strong> <%=current_user.id%> </strong> </h4>
 <br>
 <br>
+<h4> Your Role is: <strong> <%=current_user.role%> </strong> </h4>
+<br>
 <br>
 
 <%# Title and render employee search form %>
